--- a/miniProject/Base.lproj/Main.storyboard
+++ b/miniProject/Base.lproj/Main.storyboard
@@ -151,20 +151,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="신입사원 행동 강령 제목" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ndp-lQ-LRg">
-                                <rect key="frame" x="16" y="75" width="361" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="XMO-IY-wiZ"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <action selector="titleBtn:" destination="2H9-y0-DOi" eventType="editingDidEnd" id="0TE-uZ-mVZ"/>
-                                    <action selector="titleTextfield:" destination="2H9-y0-DOi" eventType="editingDidEnd" id="uEo-vM-ntv"/>
-                                </connections>
-                            </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="PyU-3c-uFv">
-                                <rect key="frame" x="16" y="141" width="361" height="595"/>
+                                <rect key="frame" x="16" y="183" width="361" height="553"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -192,20 +180,61 @@
                                     <action selector="submitButtonTapped:" destination="g9B-vz-M18" eventType="touchUpInside" id="1kU-at-L3W"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wYK-zc-UaP">
+                                <rect key="frame" x="0.0" y="59" width="393" height="50"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="싹사원" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bqb-zW-X6D">
+                                        <rect key="frame" x="169.33333333333334" y="12.333333333333327" width="54.666666666666657" height="25.333333333333329"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="21"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bigger-character-icon" translatesAutoresizingMaskIntoConstraints="NO" id="Dl3-Wj-YM5">
+                                        <rect key="frame" x="113.33333333333331" y="5" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="Bpz-Og-FG4"/>
+                                            <constraint firstAttribute="width" constant="40" id="aeu-Uk-Dzq"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.94810396429999999" green="0.97622805830000003" blue="0.99606639149999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstItem="bqb-zW-X6D" firstAttribute="centerX" secondItem="wYK-zc-UaP" secondAttribute="centerX" id="685-SM-S6L"/>
+                                    <constraint firstItem="bqb-zW-X6D" firstAttribute="leading" secondItem="Dl3-Wj-YM5" secondAttribute="trailing" constant="16" id="GDM-Lo-FGU"/>
+                                    <constraint firstAttribute="height" constant="50" id="NiB-0c-mCP"/>
+                                    <constraint firstItem="bqb-zW-X6D" firstAttribute="centerY" secondItem="wYK-zc-UaP" secondAttribute="centerY" id="dKD-HN-uAO"/>
+                                    <constraint firstItem="bqb-zW-X6D" firstAttribute="centerY" secondItem="Dl3-Wj-YM5" secondAttribute="centerY" id="fOm-py-pBp"/>
+                                </constraints>
+                            </view>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="신입사원 행동 강령 제목" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ndp-lQ-LRg">
+                                <rect key="frame" x="16" y="117" width="361" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="Lsu-UK-EIl"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="titleBtn:" destination="2H9-y0-DOi" eventType="editingDidEnd" id="0TE-uZ-mVZ"/>
+                                    <action selector="titleTextfield:" destination="2H9-y0-DOi" eventType="editingDidEnd" id="uEo-vM-ntv"/>
+                                </connections>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ef2-c0-Fd9"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="PyU-3c-uFv" firstAttribute="leading" secondItem="ef2-c0-Fd9" secondAttribute="leading" constant="16" id="1kl-Oh-Kbz"/>
-                            <constraint firstItem="V5r-Pd-WrW" firstAttribute="top" secondItem="PyU-3c-uFv" secondAttribute="bottom" constant="16" id="1lY-BJ-vji"/>
+                            <constraint firstItem="wYK-zc-UaP" firstAttribute="leading" secondItem="ef2-c0-Fd9" secondAttribute="leading" id="60o-YE-QQO"/>
                             <constraint firstItem="V5r-Pd-WrW" firstAttribute="leading" secondItem="ef2-c0-Fd9" secondAttribute="leading" constant="16" id="8zG-O7-cdy"/>
-                            <constraint firstItem="ef2-c0-Fd9" firstAttribute="trailing" secondItem="PyU-3c-uFv" secondAttribute="trailing" constant="16" id="BIG-k1-9el"/>
-                            <constraint firstItem="Ndp-lQ-LRg" firstAttribute="top" secondItem="ef2-c0-Fd9" secondAttribute="top" constant="16" id="SjY-BE-aag"/>
-                            <constraint firstItem="ef2-c0-Fd9" firstAttribute="trailing" secondItem="Ndp-lQ-LRg" secondAttribute="trailing" constant="16" id="aTG-rj-sDP"/>
-                            <constraint firstItem="Ndp-lQ-LRg" firstAttribute="leading" secondItem="ef2-c0-Fd9" secondAttribute="leading" constant="16" id="aVw-7l-oiS"/>
+                            <constraint firstItem="ef2-c0-Fd9" firstAttribute="trailing" secondItem="PyU-3c-uFv" secondAttribute="trailing" constant="16" id="PWy-uY-Mf1"/>
+                            <constraint firstItem="wYK-zc-UaP" firstAttribute="trailing" secondItem="ef2-c0-Fd9" secondAttribute="trailing" id="ZjN-5s-TPR"/>
+                            <constraint firstItem="Ndp-lQ-LRg" firstAttribute="top" secondItem="wYK-zc-UaP" secondAttribute="bottom" constant="8" symbolic="YES" id="cOu-7H-Nca"/>
                             <constraint firstItem="ef2-c0-Fd9" firstAttribute="bottom" secondItem="V5r-Pd-WrW" secondAttribute="bottom" constant="16" id="fJi-Yw-Mwg"/>
                             <constraint firstItem="ef2-c0-Fd9" firstAttribute="trailing" secondItem="V5r-Pd-WrW" secondAttribute="trailing" constant="16" id="hJc-nq-P6W"/>
-                            <constraint firstItem="PyU-3c-uFv" firstAttribute="top" secondItem="Ndp-lQ-LRg" secondAttribute="bottom" constant="16" id="txD-YO-8x4"/>
+                            <constraint firstItem="wYK-zc-UaP" firstAttribute="top" secondItem="ef2-c0-Fd9" secondAttribute="top" id="jGw-X2-GYg"/>
+                            <constraint firstItem="V5r-Pd-WrW" firstAttribute="top" secondItem="PyU-3c-uFv" secondAttribute="bottom" constant="16" id="mER-Q2-01q"/>
+                            <constraint firstItem="Ndp-lQ-LRg" firstAttribute="leading" secondItem="ef2-c0-Fd9" secondAttribute="leading" constant="16" id="nE8-3h-W7U"/>
+                            <constraint firstItem="PyU-3c-uFv" firstAttribute="leading" secondItem="ef2-c0-Fd9" secondAttribute="leading" constant="16" id="pbU-xV-UZA"/>
+                            <constraint firstItem="ef2-c0-Fd9" firstAttribute="trailing" secondItem="Ndp-lQ-LRg" secondAttribute="trailing" constant="16" id="v5s-x1-vOm"/>
+                            <constraint firstItem="PyU-3c-uFv" firstAttribute="top" secondItem="Ndp-lQ-LRg" secondAttribute="bottom" constant="16" id="wGi-Te-fUV"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="oKJ-6f-uvw"/>
