--- a/miniProject/Base.lproj/Main.storyboard
+++ b/miniProject/Base.lproj/Main.storyboard
@@ -67,6 +67,10 @@
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="JKh-qg-mq2"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="fRE-DV-2KT"/>
+                                </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ldk-WM-9hV">
                                 <rect key="frame" x="317" y="693" width="60" height="60"/>
@@ -137,6 +141,7 @@
                     <navigationItem key="navigationItem" id="ftW-UZ-rf2"/>
                     <connections>
                         <outlet property="tableView" destination="YJu-0Q-4Vm" id="Erf-5N-t5i"/>
+                        <segue destination="g9B-vz-M18" kind="show" identifier="showMemoDetail" id="wUU-cq-lFZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -387,6 +392,9 @@
             <point key="canvasLocation" x="1055.7251908396945" y="-27.464788732394368"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="wUU-cq-lFZ"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="bigger-character-icon" width="3750" height="3750"/>
         <image name="chevron.backward" catalog="system" width="97" height="128"/>
@@ -405,7 +413,7 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="tintColor">
-            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
